Version 0.5.0~dev

	* Set a default User-Agent and allow changing its value through
	  configuration.

Version 0.4.0 Released on 2012/05/28

	* Make importer support multiple serialization format.
	* Pylint/PEP8 pass on bin/importer.

Version 0.3.5 Released on 2011/04/22

	* Now released under the LGPL-2.1.

Version 0.3.4 Released on 2011/03/09

	* Actually do Content-Encoding checking in error handling,
	  closes: #3898.
	* Do not try to handle non-exporter-origined exceptions, closes: #4036.
	* Drop python 2.4 specific workarounds.

Version 0.3.3 Released on 2011/03/01

	* Decompress error message when http errors occur, closes: #3898.

Version 0.3.2 Released on 2011/01/19

	* Add bin/importer script.

Version 0.3.1 Released on 2010/12/14

	* Add missing NAME section to the man page.

Version 0.3.0 Released on 2010/12/09

	* Add gzip Accept-Encoding / Content-Encoding support, closes: #3717.

Version 0.2.6 Released on 2010/04/26

	* Add importer doc.

Version 0.2.5 Released on 2010/01/12

	* Set TCP timeout to 30 sec, add property to change it, closes: #2595.

Version 0.2.4 Released on 2009/12/09

	* Fix issues when using several Importer instances, closes: #2652.

Version 0.2.3 Released on 2009/10/27

	* Python 2.5 compatibility fix wrt urllib2 mem/fd leaks issues.

version 0.2.2 Released on 2009/06/26

	* Fix fd & memory leak on exception, closes: #2062.

Version 0.2.1 Released on 2009/06/23

	* Call only once install_opener.
	* Fix circular dependencies, closes: #2022.

Version 0.2.0 Released on 2009/06/22

	* Handle SSL certificates. Closes: #1912.
	* Fix: Display read message instead of UnpicklingError.
	* Allow calls to webengine methods.

Version 0.1.0 Released on 2009/05/12

	* Initial release
	* Added more exceptions class
	* Better error handling for UnpicklingError
	* Moved exceptions to their own python file
	* Fix bug: Different instances of Importer was sharing the same "conf"
	dictionary (due to the way python handle default arg for parameters)