@@ -2,6 +2,7 @@ Version 0.5.0~dev
 
 	* Set a default User-Agent and allow changing its value through
 	  configuration.
+	* Merge headers definitions in urllib2.Request call.
 
 Version 0.4.0 Released on 2012/05/28
 
